client_src/src/components/widgets/NotesList.module.css
.dnt__notes-list {
  min-height: 100vh;
}

/*.dnt__notes-list-muiappbar {*/
/*  top: auto;*/
/*  bottom: 0;*/
/*}*/

.dnt__notes-list-muitoolbar {
  align-items: center;
  justify-content: space-between;
}

.dnt__notes-list-header {
  /*padding-top: 60px;*/
}

.dnt__tree {
  background-color: white;
  padding-bottom: 140px;
  /*position: fixed;*/
  /*top: 0;*/
  /*left: 0;*/
  /*bottom: 0;*/
  /*width: 400px;*/
  /*height: 400px;*/
  /*overflow-x: hidden;*/
  /*overflow-y: auto;*/
}

.dnt__tree-node {

}

.dnt__tree-node--invisible {
  display: none;
}

.dnt__tree-node--active {
  /*box-shadow: 0 0 0 4px pink;*/
}

.dnt__tree-node-btn {
  vertical-align: middle;
}

